[gd_scene load_steps=9 format=3 uid="uid://ctcaevl4tnaoe"]

[ext_resource type="Script" uid="uid://bhf4xb1a3x5yf" path="res://chore_xplorer.gd" id="1_x3ro1"]
[ext_resource type="Texture2D" uid="uid://dyy3pwuhxm2vv" path="res://Assets/Pixel Art Forest/PNG/Backgrounds/background B layer1.png" id="2_moxud"]
[ext_resource type="Texture2D" uid="uid://duts3ow7kjv1e" path="res://Assets/Pixel Art Forest/PNG/Backgrounds/background C layer2.png" id="2_rc62e"]
[ext_resource type="Texture2D" uid="uid://q7frm1njw4ql" path="res://Assets/Pixel Art Forest/PNG/Backgrounds/background C layer3.png" id="3_begf4"]
[ext_resource type="Texture2D" uid="uid://dv668nkbm2rdc" path="res://Assets/Pixel Art Forest/PNG/Backgrounds/background C layer4.png" id="4_w0m4m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0kt4w"]
size = Vector2(343.709, 54.6688)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sc3n6"]
bg_color = Color(0.6438674, 0.1258032, 0.18826097, 1)
border_color = Color(0.48833764, 0.07817381, 0.15044078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1s8ay"]
bg_color = Color(0.71, 0.085200004, 0.18933353, 1)

[node name="ChoreXplorer" type="Node2D"]
position = Vector2(4.76837e-07, -5.42101e-20)
scale = Vector2(1.51, 1.51)
script = ExtResource("1_x3ro1")

[node name="BackgroundContainer" type="Node2D" parent="."]
scale = Vector2(2, 2)

[node name="Parallax2D" type="Parallax2D" parent="BackgroundContainer"]
texture_filter = 1
scroll_scale = Vector2(0.025, 0)
repeat_size = Vector2(1440, 0)
repeat_times = 3
follow_viewport = false

[node name="layer1" type="Sprite2D" parent="BackgroundContainer/Parallax2D"]
texture = ExtResource("2_moxud")

[node name="Parallax2D2" type="Parallax2D" parent="BackgroundContainer"]
texture_filter = 1
scroll_scale = Vector2(0.05, 0)
repeat_size = Vector2(1440, 0)
repeat_times = 3
follow_viewport = false

[node name="Sprite2D" type="Sprite2D" parent="BackgroundContainer/Parallax2D2"]
texture = ExtResource("2_rc62e")

[node name="Parallax2D3" type="Parallax2D" parent="BackgroundContainer"]
texture_filter = 1
scroll_scale = Vector2(0.075, 0)
repeat_size = Vector2(1440, 0)
repeat_times = 3
follow_viewport = false

[node name="Sprite2D" type="Sprite2D" parent="BackgroundContainer/Parallax2D3"]
texture = ExtResource("3_begf4")

[node name="Parallax2D4" type="Parallax2D" parent="BackgroundContainer"]
texture_filter = 1
scroll_scale = Vector2(0.1, 0)
repeat_size = Vector2(1440, 0)
repeat_times = 3
follow_viewport = false

[node name="Sprite2D" type="Sprite2D" parent="BackgroundContainer/Parallax2D4"]
texture = ExtResource("4_w0m4m")

[node name="ColorRect" type="ColorRect" parent="BackgroundContainer/Parallax2D4"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -720.0
offset_top = -740.0
offset_right = 720.0
offset_bottom = -240.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.09019608, 0.17254902, 0.19215687, 1)

[node name="next_level" type="Area2D" parent="."]
visible = false
scale = Vector2(1.0000002, 1.0000002)

[node name="CollisionShape2D" type="CollisionShape2D" parent="next_level"]
position = Vector2(660.26483, 329.13904)
shape = SubResource("RectangleShape2D_0kt4w")

[node name="playerPlaceholder" type="Node2D" parent="."]
position = Vector2(68.21193, 311.2583)

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
layer = 100
visible = false

[node name="Overlay" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="PausePanel" type="Panel" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/PausePanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="PauseMenu/PausePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="PauseMenu/PausePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResumeButton" type="Button" parent="PauseMenu/PausePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Resume"

[node name="MainMenuButton" type="Button" parent="PauseMenu/PausePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Main Menu"

[node name="Spacer2" type="Control" parent="PauseMenu/PausePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="infoPopup" type="CanvasLayer" parent="."]
visible = false

[node name="Overlay" type="ColorRect" parent="infoPopup"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -300.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 0.6)

[node name="HBoxContainer" type="HBoxContainer" parent="infoPopup/Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.5
offset_top = -78.5
offset_right = 161.5
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2

[node name="SelectConfirmButton" type="MenuButton" parent="infoPopup/Overlay/HBoxContainer"]
modulate = Color(0.3401115, 0.6818157, 0.38943195, 1)
layout_mode = 2
text = "Select"
flat = false

[node name="InfoVboxContainer" type="VBoxContainer" parent="infoPopup/Overlay/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="infoPopup/Overlay/HBoxContainer/InfoVboxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "CHORE INFO"
horizontal_alignment = 1

[node name="DismissButton" type="Button" parent="infoPopup/Overlay/HBoxContainer"]
self_modulate = Color(0.6332282, 0.045970783, 0.21104217, 1)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_sc3n6")
theme_override_styles/hover = SubResource("StyleBoxFlat_1s8ay")
text = "Dismiss"

[node name="TileMapLayerFront" type="TileMapLayer" parent="."]

[node name="TileMapLayerMid" type="TileMapLayer" parent="."]

[node name="TileMapLayerBack" type="TileMapLayer" parent="."]

[connection signal="body_entered" from="next_level" to="." method="_on_next_level_body_entered"]
[connection signal="pressed" from="PauseMenu/PausePanel/VBoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/PausePanel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_pressed"]
[connection signal="button_down" from="infoPopup/Overlay/HBoxContainer/DismissButton" to="." method="_on_dismiss_button_button_down"]
